--- a/style.css
+++ b/style.css
@@ -7,21 +7,137 @@
     margin-right: auto;
 }
 
-.header-img {
-    width: 40%;
-}
-
 header {
-    font-size: 10px;
-    font-family: Helvetica;
-    column-count: 10;
-    column-gap: 5px;
-    column-width: 20px;
-    height: min-content;
+    display: block;
+    top: 0;
+    margin-top: 0;
+    font-size: 55%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-h2 {
+.about {
+    position: absolute;
+    top: 5px;
+    left: 3%;
+    font-weight: 200;
+}
+
+.store {
+    position: absolute;
+    top: 5px;
+    left: 10%;
+    font-weight: 200;
+}
+
+.gmail {
+    position: absolute;
+    top: 5px;
+    left: 80%;
+    font-weight: 200;
+}
+
+.images {
+    position: absolute;
+    top: 5px;
+    left: 85%;
+    font-weight: 200;
+}
+
+.grid-icon {
+    position: absolute;
+    top: 10px;
+    left: 90%;
+    width: 2%;
+}
+
+.user-icon {
+    position: absolute;
+    top: 0;
+    left: 93%;
+    width: 4%;
+}
+
+input {
+    position: absolute;
+    top: 50%;
+    width: 40%;
+    height: 5%;
     display: block;
-    margin-top: auto;
-    margin-bottom: auto;
+    left: 30%;
+    border-radius: 25px;
+    border-color: lightgrey;
+}
+
+button {
+    border-radius: 5px;
+    border-color: white;
+    height: 6%;
+    background-color: #FBFBFB;
+}
+
+button:hover{
+    border-color: lightgray;
+}
+
+.google-search{
+    position: absolute;
+    top: 60%;
+    left: 40%;
+}
+
+.im-feeling-lucky{
+    position: absolute;
+    top: 60%;
+    left: 50%;
+}
+
+footer{
+    display: block;
+    background-color: lightgray;
+    width: 100%;
+    height: 10%;
+    font-size: 55%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.advertising{
+    position: absolute;
+    top: 90%;
+    left: 3%;
+    font-weight: 200;
+}
+
+.business{
+    position: absolute;
+    top: 90%;
+    left: 10%;
+    font-weight: 200;
+}
+
+.how-search-works{
+    position: absolute;
+    top: 90%;
+    left: 17%;
+    font-weight: 200;
+}
+
+.privacy{
+    position: absolute;
+    top: 90%;
+    left: 85%;
+    font-weight: 200;
+}
+
+.terms{
+    position: absolute;
+    top: 90%;
+    left: 90%;
+    font-weight: 200;
+}
+
+.settings{
+    position: absolute;
+    top: 90%;
+    left: 95%;
+    font-weight: 200;
 }
