--- a/style.css
+++ b/style.css
@@ -1,143 +1,52 @@
-.logo {
-    display: block;
-    width: 25%;
-    margin-top: 10%;
-    margin-bottom: 90%;
-    margin-left: auto;
-    margin-right: auto;
+:root {
+    background-color: white;
 }
 
-header {
-    display: block;
-    top: 0;
-    margin-top: 0;
-    font-size: 55%;
+body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.about {
-    position: absolute;
-    top: 5px;
-    left: 3%;
-    font-weight: 200;
-}
-
-.store {
-    position: absolute;
-    top: 5px;
-    left: 10%;
-    font-weight: 200;
-}
-
-.gmail {
-    position: absolute;
-    top: 5px;
-    left: 80%;
-    font-weight: 200;
-}
-
-.images {
-    position: absolute;
-    top: 5px;
-    left: 85%;
-    font-weight: 200;
-}
-
-.grid-icon {
-    position: absolute;
-    top: 10px;
-    left: 90%;
-    width: 2%;
-}
-
-.user-icon {
-    position: absolute;
-    top: 0;
-    left: 93%;
-    width: 4%;
-}
-
-input {
-    position: absolute;
-    top: 50%;
-    width: 40%;
-    height: 5%;
-    display: block;
-    left: 30%;
-    border-radius: 25px;
-    border-color: lightgrey;
-}
-
-button {
-    border-radius: 5px;
-    border-color: white;
-    height: 6%;
-    background-color: #FBFBFB;
-}
-
-button:hover{
-    border-color: lightgray;
-}
-
-.google-search{
-    position: absolute;
-    top: 60%;
-    left: 40%;
-}
-
-.im-feeling-lucky{
-    position: absolute;
-    top: 60%;
-    left: 50%;
-}
-
-footer{
-    display: block;
-    background-color: lightgray;
+.page {
     width: 100%;
-    height: 10%;
-    font-size: 55%;
-    font-family: Arial, Helvetica, sans-serif;
+    height: 100%;
+    margin: 0;
+    min-width: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: min-content;
 }
 
-.advertising{
-    position: absolute;
-    top: 90%;
-    left: 3%;
-    font-weight: 200;
+a:link,
+a:visited {
+    text-decoration: none;
+    color: darkslategray;
+    font-size: 13px;
 }
 
-.business{
-    position: absolute;
-    top: 90%;
-    left: 10%;
-    font-weight: 200;
+a:hover {
+    text-decoration: underline;
 }
 
-.how-search-works{
-    position: absolute;
-    top: 90%;
-    left: 17%;
-    font-weight: 200;
+.header {
+    padding:0px;
+    vertical-align: middle;
+    list-style: none;
 }
 
-.privacy{
-    position: absolute;
-    top: 90%;
-    left: 85%;
-    font-weight: 200;
+.link {
+    padding-right: 10px;
 }
 
-.terms{
-    position: absolute;
-    top: 90%;
-    left: 90%;
-    font-weight: 200;
+.left-align {
+    display: flex;
+    float: left;
 }
 
-.settings{
-    position: absolute;
-    top: 90%;
-    left: 95%;
-    font-weight: 200;
+.right-align {
+    display: flex;
+    float: right;
+}
+
+.header-images {
+    width: 30px;
 }
