--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ a:visited {
     text-decoration: none;
     color: darkslategray;
     font-size: 13px;
+    padding: 10px;
 }
 
 a:hover {
@@ -28,26 +29,30 @@ a:hover {
 }
 
 .header {
-    padding:10px;
+    display: block;
+    width: 100%;
+    padding: 10px;
+}
+
+.header-left, .footer-left {
+    display: flex;
+    float: left;
+    padding-left: 0px;
     list-style: none;
 }
 
-.left-align {
-    display: flex;
-    float: left;
-    padding-left: 20px;
-}
-
-.right-align {
+.header-right, .footer-right {
     display: flex;
     float: right;
     padding-right: 20px;
+    list-style: none;
 }
 
 .header-images {
     width: 30px;
     height: 30px;
-    transform: translate(0,-8px);
+    padding: 5px;
+    transform: translate(0,-11px);
 }
 
 .main {
@@ -120,11 +125,10 @@ a:hover {
     background-color: #f7f7f7;
     position: absolute;
     bottom: 0;
-    width: 96%;
-    height: 20px;
-    padding-top: 0px;
-    padding-bottom: 25px;
-    padding-right: 40px;
+    display: block;
+    width: 100%;
+    height: 50px;
+    align-self: center;
     border-style: none;
     border-top-style: solid;
     border-top-color: lightgray;
