--- a/style.css
+++ b/style.css
@@ -70,9 +70,11 @@ a:hover {
     border-style: solid;
     border-color: lightgray;
     border-width: 1px;
-    width: 550px;
+    width: 500px;
     height: 40px;
     padding-left: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
 
 .mag-button {
@@ -80,7 +82,7 @@ a:hover {
     height: 20px;
     display: block;
     margin: auto;
-    transform: translate(-1350%, -290%);
+    transform: translate(-1250%, -290%);
     border: none;
     background: transparent;
     background-image: url(https://img.icons8.com/android/24/000000/search.png);
@@ -93,7 +95,7 @@ a:hover {
     height: 25px;
     display: block;
     margin: auto;
-    transform: translate(1100%,-140%);
+    transform: translate(1000%,-140%);
     border: none;
     background: transparent;
     background-image: url(https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png);
